--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "3rdparty/PAROAtten"]
 	path = 3rdparty/PAROAtten
-	url = https://github.com/jamescsq47/PAROAtten.git
+	url = git@github.com:jamescsq47/PAROAtten.git
 [submodule "3rdparty/sparge_customize"]
 	path = 3rdparty/sparge_customize
-	url = https://github.com/jamescsq47/sparge_customize.git
+	url = git@github.com:jamescsq47/sparge_customize.git
